hphp/hack/test/typecheck/nameof/constexpr.php.exp
ERROR: File "constexpr.php", line 9, characters 21-33:
Expected constant expression for initializer (Parsing[1002])
ERROR: File "constexpr.php", line 10, characters 21-33:
Expected constant expression for initializer (Parsing[1002])
ERROR: File "constexpr.php", line 11, characters 24-36:
Expected constant expression for initializer (Parsing[1002])
ERROR: File "constexpr.php", line 12, characters 24-36:
Expected constant expression for initializer (Parsing[1002])
ERROR: File "constexpr.php", line 11, characters 24-36:
Illegal constant value (Naming[2023])
ERROR: File "constexpr.php", line 12, characters 24-36:
Illegal constant value (Naming[2023])
